Sidebar overlay fix, alignment table fix

--- a/less/header.less
+++ b/less/header.less
@@ -141,7 +141,7 @@
 		z-index: 4;
 		top: 0;
 		opacity: 0;
-		right: -100vh;
+		right: -100vw;
 		width: 100vw;
 		height: 100vh;
 		background: rgba(0,0,0,0);
